# rust-http-example-server

./: .env  Cargo.toml  readme.md
src/: config.rs  main.rs
src/domain/: entities.rs  errors.rs  mod.rs  requests.rs  responses.rs
src/handlers/: health.rs  user.rs
src/middleware/: logging_middleware.rs  request_id.rs
src/repositories/: user.rs
src/routes/: health.rs  mod.rs  user.rs
src/services/: user.rs
src/utils/: mod.rs
